spacing correction and flexbox

--- a/style.css
+++ b/style.css
@@ -2,20 +2,18 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    color: #b5b5e2;
-    font-family: heebo, sans-serif;
+    color: #fff;
+    font-family: Poppins, sans-serif;
 }
 
 ul {
     list-style: none;
     font-style: italic;
-    font-weight: 300;
-
 }
 
 a {
     text-decoration: none;
-    font-weight: 300;
+    font-weight: 700;
 }
 
 body {
@@ -23,6 +21,21 @@ body {
     background-repeat: no-repeat;
     background-position: center center fixed;
     background-size: cover;
+}
+
+header {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10px;
+}
+
+header ul {
+    display: flex;
+}
+
+header ul li {
+    padding: 5px;
 }
 
 .container {
@@ -35,4 +48,22 @@ body {
 
 .container .name h5 {
     font-size: 25px;
+}
+
+#about p {
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+.form {
+    width: 40%;
+    margin: 0 auto;
+}
+
+.form input {
+    width: 50%;
+}
+
+.form button{
+    width: 15%;
 }
